# twinbots

./: .env.template  .envrc  .pre-commit-config.yaml  Containerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yaml
dbt_chatbots/: .user.yml  dbt_project.yml  profiles.yml
dbt_chatbots/models/: final_sim_conversations.sql  refined_sim_conversations.sql
infra/: main.tf
infra/k8s/: deployment.yml  persistentvolumeclaim.yml
infra/terraform/: main.tf  variables.tf
k8s/: service.yml
web-apps/: manage.py
web-apps/chatbot/: urls.py  views.py
web-apps/chatbot/templates/chatbot/: chat.html  hundred_sim_conversations.html  veg_vegan_history.html
web-apps/chatbot/templates/registration/: login.html
web-apps/coresite/: asgi.py  settings.py  urls.py  wsgi.py
