[project]
name = "twinbots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "openai>=1.97.0",
    "psycopg[binary]>=3.2.9",
]

[tool.uv.workspace]
members = [
    "packages/simulated-conversations",
]
